@@ -638,6 +638,9 @@ static PHP_MINIT_FUNCTION(sockets)
 #ifdef AI_NUMERICSERV
 	REGISTER_LONG_CONSTANT("AI_NUMERICSERV",	AI_NUMERICSERV,		CONST_CS | CONST_PERSISTENT);
 #endif
+#ifdef SOL_LOCAL
+	REGISTER_LONG_CONSTANT("SOL_LOCAL",	        SOL_LOCAL,		CONST_CS | CONST_PERSISTENT);
+#endif
 
 	php_socket_sendrecvmsg_init(INIT_FUNC_ARGS_PASSTHRU);
 
